--- a/src/variant-templates/Flat-Remix-GTK/gtk-2.0/menubar-toolbar/menubar-toolbar-dark.rc
+++ b/src/variant-templates/Flat-Remix-GTK/gtk-2.0/menubar-toolbar/menubar-toolbar-dark.rc
@@ -1,11 +1,11 @@
 style "menubar" {
 
   bg[NORMAL] = "#2f343f"
-  fg[NORMAL] = "#afb8c5"
-  fg[PRELIGHT] = "#afb8c5"
-  fg[ACTIVE] = "#afb8c5"
+  fg[NORMAL] = "#eeeeec"
+  fg[PRELIGHT] = "#eeeeec"
+  fg[ACTIVE] = "#eeeeec"
   fg[SELECTED] = @selected_fg_color
-  fg[INSENSITIVE] = shade(0.7, "#afb8c5")
+  fg[INSENSITIVE] = shade(0.7, "#eeeeec")
 
   xthickness = 0
   ythickness = 0
@@ -24,9 +24,9 @@ style "menubar" {
 style "menubar-borderless" {
 
   bg[NORMAL] = "#2f343f"
-  fg[NORMAL] = "#afb8c5"
+  fg[NORMAL] = "#eeeeec"
   fg[SELECTED] = @selected_fg_color
-  fg[INSENSITIVE] = shade(0.7, "#afb8c5")
+  fg[INSENSITIVE] = shade(0.7, "#eeeeec")
 
   xthickness = 0
   ythickness = 0
@@ -45,7 +45,7 @@ style "menubar-borderless" {
 style "menubar_item" {
 
   xthickness = 2
-  ythickness = 4
+  ythickness = 6
 
   fg[PRELIGHT] = @selected_fg_color
 
@@ -55,7 +55,7 @@ style "menubar_item" {
       function = BOX
       state = PRELIGHT
       file = "menubar-toolbar/menubar_button-dark.png"
-      border = { 2, 2, 2, 2 }
+      border = { 0, 0, 0, 5 }
       stretch = TRUE
     }
   }
@@ -72,15 +72,15 @@ style "menubar-text" {
 
 
 style "toolbar_text" {
-  fg[NORMAL] = "#afb8c5"
-  fg[PRELIGHT] = "#afb8c5"
-  fg[INSENSITIVE] = shade(0.7, "#afb8c5")
-  fg[ACTIVE] = "#afb8c5"
+  fg[NORMAL] = "#eeeeec"
+  fg[PRELIGHT] = "#eeeeec"
+  fg[INSENSITIVE] = shade(0.7, "#eeeeec")
+  fg[ACTIVE] = "#eeeeec"
 
-  text[NORMAL] = "#afb8c5"
-  text[PRELIGHT] = "#afb8c5"
-  text[INSENSITIVE] = shade(0.7, "#afb8c5")
-  text[ACTIVE] = "#afb8c5"
+  text[NORMAL] = "#eeeeec"
+  text[PRELIGHT] = "#eeeeec"
+  text[INSENSITIVE] = shade(0.7, "#eeeeec")
+  text[ACTIVE] = "#eeeeec"
 
 }
 
@@ -131,7 +131,7 @@ style "toolbar_entry" {
   base[ACTIVE] = "#404552"
   base[INSENSITIVE] = "#39404d"
 
-  text[NORMAL] = "#afb8c5"
+  text[NORMAL] = "#eeeeec"
 
   engine "pixmap" {
 
