Update theme variants order based on most downloaded

--- a/src/Makefile.inc
+++ b/src/Makefile.inc
@@ -3,7 +3,7 @@ OPTIPNG?=optipng -o7 --strip all --quiet
 SCSS?=sassc
 
 DEFAULT_THEME_COLOR?=\#2777ff
-COLOR_VARIANTS ?= Blue Green Red Yellow Black Brown Cyan Grey Magenta Orange Teal Violet White
+COLOR_VARIANTS ?= Blue Green Black Red Orange Cyan Violet Teal Grey Magenta White Yellow Brown
 
 COLOR_Black?=\#000000
 TEXT_COLOR_Black?=\#ffffff
