GTK3: add assets for darkest theme variant

--- a/src/assets-renderer/gtk3/Makefile
+++ b/src/assets-renderer/gtk3/Makefile
@@ -35,8 +35,10 @@ $(COLOR_VARIANTS):
 	mkdir -p $(THEMES_DIR)Flat-Remix-GTK-$@-Light/gtk-4.0/
 	mkdir -p $(THEMES_DIR)Flat-Remix-GTK-$@-Dark/gtk-3.0/assets/
 	mkdir -p $(THEMES_DIR)Flat-Remix-GTK-$@-Dark/gtk-4.0/
+	mkdir -p $(THEMES_DIR)Flat-Remix-GTK-$@-Darkest/gtk-3.0/assets/
 	cp $(CURRENT_ASSETS_DIR)* $(THEMES_DIR)Flat-Remix-GTK-$@-Light/gtk-3.0/assets/
 	cp $(CURRENT_ASSETS_DIR)* $(THEMES_DIR)Flat-Remix-GTK-$@-Dark/gtk-3.0/assets/
+	cp $(CURRENT_ASSETS_DIR)* $(THEMES_DIR)Flat-Remix-GTK-$@-Darkest/gtk-3.0/assets/
 	ln -nrsvf $(THEMES_DIR)Flat-Remix-GTK-$@-Light/gtk-3.0/assets/ $(THEMES_DIR)Flat-Remix-GTK-$@-Light/gtk-4.0/assets
 	ln -nrsvf $(THEMES_DIR)Flat-Remix-GTK-$@-Dark/gtk-3.0/assets/ $(THEMES_DIR)Flat-Remix-GTK-$@-Dark/gtk-4.0/assets
 
