Metacity: add darkest theme

--- a/src/assets-renderer/metacity/Makefile
+++ b/src/assets-renderer/metacity/Makefile
@@ -6,7 +6,7 @@ THEMES_DIR=../../../themes/
 .PHONY: build $(COLOR_VARIANTS) clean
 
 build:
-	for variant in Light Dark ; \
+	for variant in Light Dark Darkest; \
 	do \
 		mkdir -p $(THEMES_DIR)Flat-Remix-$$variant-Metacity/metacity-1/ ; \
 		for asset in $(ASSETS) ; \
