--- a/src/assets-renderer/thumbnail/Makefile
+++ b/src/assets-renderer/thumbnail/Makefile
@@ -15,7 +15,7 @@ $(COLOR_VARIANTS):
 		sed -e 's/$(DEFAULT_THEME_COLOR)/$(COLOR_$@)/gi' \
 		    -e 's/$(TEMPLATE_SELECTED_COLOR)/$(TEXT_COLOR_$@)/gi' \
 		    gtk3-$$variant.svg \
-		| $(INKSCAPE) --pipe --export-filename=$(THEMES_DIR)Flat-Remix-GTK-$@-$$variant/gtk-3.0/thumbnail.png ; \
+		| $(INKSCAPE) --pipe --export-filename=$(THEMES_DIR)Flat-Remix-GTK-$@-$$variant/gtk-3.0/thumbnail.png > /dev/null 2>&1 ; \
 	done
 
 metacity:
@@ -24,6 +24,6 @@ metacity:
 		mkdir -p $(THEMES_DIR)Flat-Remix-$$variant-Metacity/metacity-1/ ; \
 		sed -e 's/$(DEFAULT_THEME_COLOR)/$(COLOR_$@)/gi' \
 		    metacity-$$variant.svg \
-		| $(INKSCAPE) --pipe --export-filename=$(THEMES_DIR)Flat-Remix-$$variant-Metacity/metacity-1/thumbnail.png ; \
+		| $(INKSCAPE) --pipe --export-filename=$(THEMES_DIR)Flat-Remix-$$variant-Metacity/metacity-1/thumbnail.png > /dev/null 2>&1 ; \
 	done
 
